# sembla

./: .gitignore  Dockerfile  Makefile  README.md  pyproject.toml  requirements.txt
.devcontainer/: devcontainer.json
notebooks/: agent-tools.ipynb  agent.ipynb
src/legacy/: __main__.py  agent.py  chat_completion.py  main.py
src/legacy/actions/: __init__.py  action_module.py  ai_assistant.py  functions.py  terminal.py
src/legacy/augmentations/: __init__.py  critic.py  linting.py
src/legacy/prompt/: handler.py
src/legacy/response/: handler.py  processor.py  types.py
src/legacy/schemas/: actions.py  base.py  responses.py
src/legacy/utils/: markdown.py
src/sembla/: conversation_history.py  system.py
src/sembla/actions/: functions.py  utils.py
src/sembla/llm/openai/: chat_completion.py
src/sembla/prompt/: utils.py
src/sembla/response/: processor.py
src/sembla/schemas/: base.py  system.py
tests/: test_actions.py
tests/test_utils/: test_markdown.py
