[tool.poetry]
name = "sembla"
version = "0.1.0"
description = ""
authors = ["Dominic Thorn <dominic.thorn@gmail.com>"]
readme = "README.md"
packages = [
    { include = "sembla", from = "src" },
]

[tool.poetry.dependencies]
python = ">=3.8.1,<4.0.0"
langchain = "^0.0.133"
openai = "^0.27.4"
google-search-results = "^2.4.2"
beautifulsoup4 = "^4.12.2"
tiktoken = "^0.3.3"
requests = "^2.28.2"
rich = "^13.3.3"
wikipedia = "^1.4.0"
pydantic = "^1.10.7"
pexpect = "^4.8.0"
flake8 = "^6.0.0"
black = "^23.3.0"
isort = "^5.12.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.2.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"

[tool.black]
line-length = 88
target-version = ['py38']
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''
